src/objects/blng__RevenueAdjustmentLine__c.object
<CustomObject>
    <fields>
        <fullName>Meyers_Id__c</fullName>
        <description>Used to store the Meyers SF ID for the merge. May be removed after the merge or 12/19</description>
        <externalId>true</externalId>
        <inlineHelpText>Used to store the Meyers SF ID for the merge. May be removed after the merge or 12/19</inlineHelpText>
        <label>Meyers Id</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>blng__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Revenue Adjustments</relationshipLabel>
        <relationshipName>AccountRevenueAdjustmentLines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__AdjustmentAmount__c</fullName>
        <label>Adjustment Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>blng__FinanceBook__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Finance Book</label>
        <referenceTo>blng__FinanceBook__c</referenceTo>
        <relationshipLabel>Revenue Adjustment Lines</relationshipLabel>
        <relationshipName>FinanceBookRevenueAdjustmentLines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__FinancePeriod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Finance Period</label>
        <referenceTo>blng__FinancePeriod__c</referenceTo>
        <relationshipLabel>Revenue Adjustment Lines</relationshipLabel>
        <relationshipName>FinancePeriodRevenueAdjustmentLines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__GLRule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GL Rule</label>
        <referenceTo>blng__GLRule__c</referenceTo>
        <relationshipLabel>Revenue Adjustment Lines</relationshipLabel>
        <relationshipName>GLRuleRevenueAdjustmentLines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__GLTreatment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GL Treatment</label>
        <referenceTo>blng__GLTreatment__c</referenceTo>
        <relationshipLabel>Revenue Adjustment Lines</relationshipLabel>
        <relationshipName>GLTreatmentRevenueAdjustmentLines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__LegalEntity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Legal Entity</label>
        <referenceTo>blng__LegalEntity__c</referenceTo>
        <relationshipLabel>Revenue Adjustment Lines</relationshipLabel>
        <relationshipName>LegalEntityRevenueAdjustmentLines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>blng__RevenueAdjustmentDate__c</fullName>
        <label>Revenue Adjustment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>blng__RevenueAdjustment__c</fullName>
        <label>Revenue Adjustment</label>
        <referenceTo>blng__RevenueAdjustment__c</referenceTo>
        <relationshipLabel>Revenue Adjustment Lines</relationshipLabel>
        <relationshipName>RevenueAdjustmentRevenueAdjustmentLines</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>blng__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>blng__RevenueAdjustmentLineStatus</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>blng__TargetRevenueSchedule__c</fullName>
        <label>Target Revenue Schedule</label>
        <referenceTo>blng__RevenueSchedule__c</referenceTo>
        <relationshipLabel>Revenue Adjustment Lines</relationshipLabel>
        <relationshipName>RevenueScheduleRevenueAdjustmentLines</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>blng__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>blng__RevenueAdjustmentLineType</valueSetName>
        </valueSet>
    </fields>
    <label>Revenue Adjustment Line</label>
    <nameField>
        <label>Revenue Adjustment Line Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Revenue Adjustment Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>